--- a/findwater/src/main/webapp/WEB-INF/web.xml
+++ b/findwater/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   <display-name>find water</display-name>
   
   <welcome-file-list>
-  	<welcome-file>index.jsp</welcome-file>
+  	<welcome-file>home.html</welcome-file>
   </welcome-file-list>
   
   <servlet>
