--- a/findwater/pom.xml
+++ b/findwater/pom.xml
@@ -41,6 +41,11 @@
 		<artifactId>spring-core</artifactId>
 		<version>4.1.6.RELEASE</version>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>4.1.6.RELEASE</version>
+	</dependency>
 	
 	<!-- servlet api -->
 	<dependency>
@@ -61,6 +66,20 @@
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
 		<version>3.4</version>
+	</dependency>
+	
+	<!-- mysql driver -->
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.36</version>
+	</dependency>
+	
+	<!-- apache dbcp -->
+	<dependency>
+		<groupId>commons-dbcp</groupId>
+		<artifactId>commons-dbcp</artifactId>
+		<version>1.4</version>
 	</dependency>
 	
 	
