--- a/findwater/src/main/webapp/WEB-INF/web.xml
+++ b/findwater/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>contextConfigLocation</param-name>
-  		<param-value>classpath:spring/springmvc.xml</param-value>
+  		<param-value>classpath:spring/springmvc.xml,classpath:spring/springdao_mysql.xml</param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
